Version 1.1.0 (WIP)
    Additions:
    - Added new mob trophies to the questbook shop
    - Added a new structure, the Deep Monster Room, to the Depths

    Changes:
    - Changed the train casing recipe to no longer need sturdy sheets

    Fixes:
    - 


Version 1.0.1
    Additions:
    - Added Command Blocks to the Redstone Blocks creative tab and thus JEI
    - Added structure and biome maps to the shop

    Changes:
    - Sophisticated backpacks can no longer be found in loot chests
    - Tarot cards can no longer be found in loot chests
    - Removed some Farmer's Delight loot from some chests to prevent overcrowding
    - Tarot cards must be equipped in a curio slot to function
    - Nerfed some tarot card abilities:
        - Emperor: Hero of the Village III -> I
        - Fool: Jump Boost III -> I
        - Chariot: Speed +20% -> +10%
        - Strength: Strength II -> I
        - Justice: Damage reflected 25% -> 5%
        - Death: Bonus damage 20% -> 8%
        - Judgement: Double damage chance 15% -> 3%
        - Tower: Fall damage reduction 100% -> 25%
        - Devil: Inflict Weakness III -> I
        - Hierophant: XP boost 150% -> 100%
        - Lovers: Regeneration III -> I
        - Sun: Bonus health 25% -> 5%
        - Wheel of Fortune: Luck 3 -> 2
        - Temperance: Hunger reduction 25% -> 15%
    - Changed the recipes for alchemy upgrades for Sophisticated Storage & Backpacks
    - Changed the recipes for most seashelf and hellshelf items from Apotheosis
    - Added recipes for the Artisan Relic, Crescent Moon, Soul Crimson Stone, and Elementarium
    - Lastly, the recipes for the Ominous Catalyst, Quantum Catcher, Ender Lead, Agronomic & Volcanic Sourcelinks, and more have changed

    Fixes:
    - Improved the error message when the player fails to use a portal block correctly
    - Replaced the placeholders left in Cataclysm's structures eyes' tooltips
    - Improved some quest descriptions & rewards